--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,11 +9,14 @@ readme = "README.md"
 python = "^3.8"
 flask = "^3.0.3"
 gunicorn = "^23.0.0"
+flask-wtf = "^1.2.1"
+flask-login = "^0.6.3"
 
 [tool.poetry.group.dev.dependencies]
 pylint = "^3.2.7"
 autopep8 = "^2.3.1"
 invoke = "^2.2.0"
+pyclean = "^3.0.0"
 
 [build-system]
 requires = ["poetry-core"]
