Config reads the SECRET_KEY read from .env

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ flask = "^3.0.3"
 gunicorn = "^23.0.0"
 flask-wtf = "^1.2.1"
 flask-login = "^0.6.3"
+python-dotenv = "^1.0.1"
 
 [tool.poetry.group.dev.dependencies]
 pylint = "^3.2.7"
