--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,8 @@ gunicorn = "^23.0.0"
 flask-wtf = "^1.2.1"
 python-dotenv = "^1.0.1"
 email-validator = "^2.2.0"
+psycopg2 = "^2.9.9"
+flask-sqlalchemy = "^3.1.1"
 
 [tool.poetry.group.dev.dependencies]
 pylint = "^3.2.7"
