--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ click==8.1.7
 colorama==0.4.6
 dnspython==2.6.1
 email-validator==2.2.0
+flask-sqlalchemy==3.1.1
 flask-wtf==1.2.1
 flask==3.0.3
 gunicorn==23.0.0
@@ -12,6 +13,7 @@ itsdangerous==2.2.0
 jinja2==3.1.4
 markupsafe==2.1.5
 packaging==24.1
+psycopg2==2.9.9
 python-dotenv==1.0.1
 werkzeug==3.0.4
 wtforms==3.1.2
