--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ python-dotenv = "^1.0.1"
 email-validator = "^2.2.0"
 psycopg2 = "^2.9.9"
 flask-sqlalchemy = "^3.1.1"
+pillow = "^10.4.0"
 
 [tool.poetry.group.dev.dependencies]
 pylint = "^3.2.7"
