--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ email-validator==2.2.0
 flask-sqlalchemy==3.1.1
 flask-wtf==1.2.1
 flask==3.0.3
+greenlet==3.1.1
 gunicorn==23.0.0
 idna==3.9
 importlib-metadata==8.4.0
@@ -13,8 +14,11 @@ itsdangerous==2.2.0
 jinja2==3.1.4
 markupsafe==2.1.5
 packaging==24.1
+pillow=10.4.0
 psycopg2==2.9.9
 python-dotenv==1.0.1
+sqlalchemy==2.0.35
+typing-extensions==4.12.2
 werkzeug==3.0.4
 wtforms==3.1.2
 zipp==3.20.1
