--- a/requirements.txt
+++ b/requirements.txt
@@ -14,7 +14,7 @@ itsdangerous==2.2.0
 jinja2==3.1.4
 markupsafe==2.1.5
 packaging==24.1
-pillow=10.4.0
+pillow==10.4.0
 psycopg2==2.9.9
 python-dotenv==1.0.1
 sqlalchemy==2.0.35
