--- a/requirements.txt
+++ b/requirements.txt
@@ -15,7 +15,7 @@ jinja2==3.1.4
 markupsafe==2.1.5
 packaging==24.1
 pillow==10.4.0
-psycopg2==2.9.9
+psycopg2-binary==2.9.10
 python-dotenv==1.0.1
 sqlalchemy==2.0.35
 typing-extensions==4.12.2
